--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,57 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.App {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 70vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.home {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.custom-group {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.custom_input {
+	padding: 6px;
+	border: none;
+	border-bottom: 1px solid;
+	text-align: center;
+	font-size: 1.6rem;
+	margin-bottom: 1rem;
+	width: 40%;
+	font-weight: bolder;
+}
+
+.custom-label {
+	font-size: 1.2rem;
+}
+.btn-group {
+	display: flex;
+	flex-direction: column;
+	/* align-items: center; */
+	width: 50%;
+}
+
+button {
+	padding: 8px;
+	margin-bottom: 0.5rem;
+	border-radius: 10px;
+	border-width: 0.1px;
+	border-color: #0026cf;
+	/* overflow: hidden; */
+	font-size: 1rem;
+	transition-duration: 0.4s;
+	background-color: white;
+	font-weight: bold;
+}
+button:hover {
+	background-color: #0026cf; /* Green */
+	color: white;
 }
